<resources>
    <string name="app_name">Briscola</string>
    <string name="facebook_application_id" translatable="false">603960137243421</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb603960137243421</string>
    <string-array name="tipoCarte">
        <item>Napoletane</item>
        <item>Romagnole</item>
        <item>Piacentine</item>
        <item>Poker</item>
    </string-array>
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Hard</item>
    </string-array>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="myprofile">My account</string>
    <string name="briscola">Briscola</string>
    <string name="createroom">Create room</string>
    <string name="joingame">Join room</string>
    <string name="howtoplaymp">How to play with a friend</string>
    <string name="goback">Go back</string>
    <string name="edit">Edit</string>
    <string name="logout">Successfully logout!</string>
    <string name="totwin">Matches won:</string>
    <string name="totlose">Matches lost:</string>
    <string name="tottie">Matches tied:</string>
    <string name="rateo">W/L Ratio:</string>
    <string name="accountid">Account ID:</string>
    <string name="insertcode">Insert your code</string>
    <string name="loading">Loading…</string>
    <string name="credits">Created by Daniele Calisti and Di Berardino Simone</string>
    <string name="whylogin">Why login?</string>
    <string name="win">Victory!</string>
    <string name="lost">Match lost!</string>
    <string name="tie">Match tied!</string>
    <string name="points">Points</string>
    <string name="guest">Guest</string>
    <string name="cpu">CPU</string>
    <string name="bestcards">Your best cards</string>
    <string name="playagain">Play again</string>
    <string name="backtomenu">Go back to menu</string>
    <string name="cartescoperte">Show enemy cards</string>
    <string name="settings">Settings</string>
    <string name="waitroom">Waiting room</string>
    <string name="waitopponent">Waiting for the opponent…</string>
    <string name="state">"State: "</string>
    <string name="code">"Code: "</string>
    <string name="closeroom">Close room</string>
    <string name="closegame">Close game</string>
    <string name="confirmleave">Closing game?</string>
    <string name="intro">Introduction to the game</string>
    <string name="howtoplay">"RULES OF THE GAME: A deck of Italian cards consists of forty cards, divided into four suits: coins (Denari in Italian), swords (Spade), cups (Coppe) and clubs (Bastoni). The values on the cards range numerically from one through seven, plus three face cards in each suit: Knave (Fante in Italian), Knight (Cavallo in Italian), and King (Re in Italian). A Knave is a lone human figure standing. The Knight is a human figure riding a horse. The King is a human figure wearing a crown. (Played with a French deck, Queens take the place of Knights.) To determine the face value of any numeric card, simply count the number of suit icons on the card. The ace card of coins is usually a type of bird with circle in the middle. Each player receives 3 cards, the trump is then removed from the deck and placed visible under the remaining cards. Each player takes turns playing a card. A random player starts, then the player who took the last trick goes first. When both players have played their cards, the trick is awarded. The played cards are assigned to whoever played the highest value card of the first suit played. If one of the players has played a trump, the trick is taken by the one who has played the highest trump. When all the players have played their card, assigned the trick, then we proceed to draw a card from the deck. The player who made the catch draws first. When all the cards have been drawn, the cards remaining in the player's hand are played until all the cards have been played. At this point, the number of cards taken is counted.\n\nCARD VALUES:\nAce: 11 points;\nThree: 10 points;\nEight: 2 points;\nNine: 3 points;\nTen: 4 points."</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="howtoplaymptut">Playing with a friend is so easy! Create your own lobby and wait until your friend joins your match using your code or vice-versa!</string>
    <string name="waiting">Waiting</string>
    <string name="trovato">Found</string>
    <string name="sessionclosed">Session closed! Create a new lobby to start playing again.</string>
    <string name="leavegame">Leave game</string>
    <string name="confirmleavegame">Leaving the game?</string>
    <string name="typecard">Cards</string>
    <string name="youleft">You left the game!</string>
    <string name="enemyleft">Your opponent left the game!</string>
    <string name="unknownerror">Oops! Something went wrong!</string>
    <string name="whylogintext">If you register or login to your social account you\'ll grant the access to the multiplayer mode and you\'ll be able to play with your friends at any time!</string>
    <string name="roomnotexisting">This room does not exist or your opponent is currently inactive.</string>
    <string name="roomfull">Room is currently full!</string>
    <string name="tuoturno">It\'s your turn!</string>
    <string name="turno">It\'s %user\'s turn!</string>
    <string name="init">Configuration</string>
    <string name="choosecard">Choose your favorite type of cards</string>
    <string name="welcome">Welcome!</string>
    <string name="randomcard">Random card type</string>
    <string name="notsure">Or select a random one</string>
    <string name="lastmanche">Last manche!</string>
    <string name="matchended">Match ended!</string>
    <string name="confirm">Confirm</string>
    <string name="inserttext">Insert here…</string>
    <string name="contactus">Contact us</string>
    <string name="contactustxt">This game has been developed by Simone Di Berardino and Daniele Calisti. If you want to get in touch with us, you can send an email to diberardinocalisti@gmail.com!</string>
    <string name="textchat">Text chat</string>
    <string name="sendamessage">Send a message</string>
    <string name="joinedgame">joined the game!</string>
    <string name="welcomechat">» Welcome to the game chat!</string>
    <string name="touchtostart">Touch to start!</string>
    <string name="joinfriend">Join a friend</string>
    <string name="accessviacode">Join via code</string>
    <string name="roomlist">Room list</string>
    <string name="refresh">Refresh</string>
    <string name="noavailableroom">Ooops! No rooms found.</string>
    <string name="full">Full</string>
    <string name="warning">Warning!</string>
    <string name="logoutsuccess">Logged out successfully!</string>
    <string name="showall">All</string>
    <string name="shownotempty">Only available</string>
    <string name="filterrooms">Filter rooms</string>
    <string name="roomsettings">Room list settings</string>
    <string name="show">Show</string>
    <string name="filter">Filter</string>
    <string name="waithost">Waiting for the host, retry in a few seconds…</string>
    <string name="storico">Match history</string>
    <string name="nomatchfound">No matches found.</string>
    <string name="resethistory">Reset history</string>
    <string name="resetconfirm">Are you sure you want to reset your match history?</string>
    <string name="cpuskill">CPU Skill</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="skillselect">Set the difficulty</string>
    <string name="rateapptitle">Do you like this game? Rate the app!</string>
    <string name="you">You</string>
    <string name="notconcluded">Not ended</string>
    <string name="cardscollected">You collected {ncards} cards.</string>
    <string name="matchtime">Match time: {time}</string>
    <string name="yourcards">Cards collected</string>
    <string name="difficultysetto">Difficulty set to {difficulty}!</string>
    <string name="pointswvalue">{points} points</string>
    <string name="nocardscollected">No cards collected.</string>
    <string name="login_page">Login page</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="login_method">Choose your preferred login method</string>
    <string name="moreinfo">More info</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="register_page">Register page</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="username">Username</string>
    <string name="password_recovery">Forgot your password?</string>
    <string name="loginerror">Wrong login details.</string>
    <string name="loginsuccess">Logged in with success!</string>
    <string name="usernameerror">Your username is not valid.</string>
    <string name="usernameexisting">This username is already registered.</string>
    <string name="erroredit">Login with Facebook if you want to edit your profile!</string>
    <string name="confirmlogout">Are you sure you want to logout?</string>
    <string name="usernamelength">Your username needs to be atleast {length} characters long.</string>
    <string name="passwordlength">Your password needs to be atleast {length} characters long.</string>
    <string name="emailnotvalid">Please enter a valid email.</string>
    <string name="registersuccess">Registered with success!</string>
    <string name="emailexisting">This email is already registered.</string>
    <string name="ranking">Ranking Top 50</string>
    <string name="avatarname">Avatar name</string>
    <string name="chooseavatar">Choose an avatar</string>
    <string name="erroravatar">You must choose an avatar.</string>
    <string name="editavatar">Edit your avatar</string>
    <string name="editusername">Edit your username</string>
    <string name="cantfindaccount">Something went wrong with your account, you will be disconnected.</string>
    <string name="logoutbtn">Logout</string>
    <string name="invalidusername">Invalid username</string>
    <string name="invalidcharacters">You entered invalid characters, please retry.</string>
    <string name="yourfriends">Your friends</string>
    <string name="visitprofile">Search on Facebook</string>
    <string name="mustbeloggedwithfacebook">You must be logged with Facebook if you want to show your friends. Confirm if you want to go to your Facebook login page. Note: if you\'re registered with your username, you will be disconnected.</string>
    <string name="roomnolongeravailable">This room is no longer available.</string>
    <string name="appupdated">App updated! What\'s new?</string>
    <string name="latestupdate">• In-game store added;\n• Coins added: you can earn some watching video ads or winning games;\n• Premium avatars added: visit the store and buy as many as you can!\n• GUI Updated;</string>
    <string name="internetoffline">You aren\'t connected to Internet</string>
    <string name="internetofflinereason">This app needs the access to the internet in order to work, the app will be closed.</string>
    <string name="logintoearncoin">Register or login with an email to earn coin and buy some new cool features!</string>
    <string name="howtousecoin">Coins can be used to buy some premium features, watch some ads, beat your opponents or go to the store to earn some!</string>
    <string name="shop">Visit shop</string>
    <string name="price_placeholder" translatable="false">{price}€</string>
    <string name="coins">coins</string>
    <string name="shoppage">Shop page</string>
    <string name="price">Price</string>
    <string name="removeads">Remove ads</string>
    <string name="verifiedConsume">Your item has been bought correctly</string>
</resources>