<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/typeCardSpinner"
            android:layout_width="150dp"
            android:layout_height="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space">

        </Spinner>

        <TextView
            android:id="@+id/typeCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/typecard"
            android:textColor="#000000"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/typeCardSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/typeCardSpinner" />

        <TextView
            android:id="@+id/cpuSkill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cpuskill"
            android:textColor="#000000"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/typeCards"
            app:layout_constraintTop_toBottomOf="@+id/typeCards" />

        <Spinner
            android:id="@+id/cpuSkillSpinner"
            android:layout_width="150dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="@+id/cpuSkill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cpuSkill">

        </Spinner>

        <CheckBox
            android:id="@+id/showCardCheckbox"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColor="#000000"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/showCards"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/showCards" />

        <TextView
            android:id="@+id/showCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cartescoperte"
            android:textColor="#000000"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/typeCards"
            app:layout_constraintTop_toBottomOf="@+id/cpuSkill" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>