<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view11"
                android:layout_width="1dp"
                android:layout_height="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/loginUsernameIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/loginUsernameField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/loginUsernameField"
                app:srcCompat="@drawable/ic_baseline_account_circle_24" />

            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/loginPasswordField"
                app:layout_constraintStart_toStartOf="@+id/loginUsernameIcon"
                app:layout_constraintTop_toTopOf="@+id/loginPasswordField"
                app:srcCompat="@drawable/ic_baseline_lock_24" />

            <TextView
                android:id="@+id/recoverPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:linksClickable="false"
                android:text="@string/password_recovery"
                android:textColor="#4CAF50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginPasswordField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginUsernameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/loginUsernameIcon"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginUsernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPasswordField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/loginUsernameField"
                app:layout_constraintStart_toStartOf="@+id/loginUsernameField"
                app:layout_constraintTop_toBottomOf="@+id/loginUsernameField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:password="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/carter_one"
                android:shadowColor="#000"
                android:shadowDx="2"
                android:shadowDy="5"
                android:shadowRadius="1.5"
                android:text="@string/login_page"
                android:textAllCaps="false"
                android:textColor="#039846"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/loginConfirm"
                android:layout_width="250px"
                android:layout_height="120px"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.85"
                android:background="@drawable/green_button"
                android:text="@string/login"
                android:textSize="12.5sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view11"
                app:layout_constraintTop_toBottomOf="@+id/recoverPassword" />

            <Button
                android:id="@+id/loginRegister"
                android:layout_width="250px"
                android:layout_height="120px"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:alpha="0.85"
                android:background="@drawable/green_button"
                android:text="@string/register"
                android:textSize="12.5sp"
                app:layout_constraintBottom_toBottomOf="@+id/loginConfirm"
                app:layout_constraintStart_toEndOf="@+id/view11"
                app:layout_constraintTop_toTopOf="@+id/loginConfirm" />

            <ImageView
                android:id="@+id/loginClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>